--- a/index.html
+++ b/index.html
@@ -120,14 +120,12 @@
 				
 				graph image
 
-				answer:  (answerunit)
+				answer buttons
 			-->
 				<h2>Question <span id="graph-question-number"></span></h2>
 				<span id="graph-question-text"></span><br/>
-				<br/>
-				This question isn't functioning yet. Click continue to move to the next question.<br/>
-				<br/>
-				<input id="graph-question-submit" type="button" value="Continue" />
+				<img src="graphics/graph.png" /><br/>
+				Answer: <input id="graph-answer-displacement" type="button" value="Dispacement" /> <input id="graph-answer-velocity" type="button" value="Velocity" /> <input id="graph-answer-acceleration" type="button" value="Acceleration" />
 			</div>
 		</div>
 
